versioned_docs/version-2.2/index.mdx
---
slug: /
---

# kubefirst Platforms

## What is kubefirst?

kubefirst is a free, fully automated, and instantly operational open source platform that includes some of the most popular open source tools available in the Kubernetes space, all working together in a click.

We support local, AWS, and Civo clouds, with additional clouds in beta. By running our installer in your cloud, you'll get a GitOps cloud management and application delivery ecosystem complete with automated Terraform workflows, Vault secrets management, GitLab or GitHub integrations with Argo, and a demo application that demonstrates how it all pieces together.

![kubefirst Architecture](img/common/kubefirst/architecture-light.png#light-mode)![kubefirst Architecture](img/common/kubefirst/architecture-dark.png#dark-mode)

---

# Choose your environment

<div className="row">
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/k3d_header.png").default}
               alt="Local k3d"
               title="Local k3d" />
            </div>
            <div className="card__body">
            <h3>kubefirst k3d (local)</h3>
            <p>
               The <strong>fastest</strong> way to explore the kubefirst platform!
            </p>
            <p>
               With kubefirst k3d, you can explore some of the best parts of the kubefirst platform running for <strong>free</strong> on a local k3d cluster in 5 minutes - without any cloud costs or domain prerequisites.
            </p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="k3d/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/aws_header.png").default}
               alt="AWS"
               title="AWS" />
            </div>
            <div className="card__body">
            <h3>AWS</h3>
            <p>
               Our AWS cloud platform can accommodate all the <strong>needs of your enterprise</strong>. All you need is a domain in addition to a hosted zone, and within 35 minutes of running a single command, you'll have a secure EKS infrastructure management and application delivery platform.
            </p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="aws/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/civo_header.jpg").default}
               alt="Civo"
               title="Civo" />
            </div>
            <div className="card__body">
            <h3>Civo</h3>
            <p>
               The perfect cloud environment when Kubernetes will be the center of attention.
            </p>
            <p>A <strong>simple cloud footprint</strong> with a powerful open source cloud native tool set for identity and infrastructure management, application delivery, and secrets management. Cloud native infrastructure with incredibly fast provisioning times.</p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="civo/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/do_header.png").default}
               alt="DigitalOcean"
               title="DigitalOcean" />
            </div>
            <div className="card__body">
            <h3>DigitalOcean (beta)</h3>
            <p>Whatever your vision—a SaaS app, a website, an eCommerce store—build it here using DigitalOcean's simple, cost-effective cloud hosting services.</p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="do/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/gcp_header.png").default}
               alt="Google Cloud"
               title="Google Cloud" />
            </div>
            <div className="card__body">
            <h3>Google Cloud (beta)</h3>
            <p>Google Cloud Platform, offered by Google, is a suite of cloud computing services that runs on the same infrastructure that Google uses internally for its end-user products, such as Google Search, Gmail, Google Drive, and YouTube.</p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="gcp/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
    <div className="col col--4 margin-bottom--lg">
        <div className="card">
            <div className="card__image">
            <img
               src={require("/static/img/vultr_header.png").default}
               alt="Vultr Cloud"
               title="Vultr Cloud" />
            </div>
            <div className="card__body">
            <h3>Vultr (beta)</h3>
            <p>A cloud hosting provider that offers high-performance SSD-based cloud servers, block storage, object storage, and dedicated servers in multiple locations worldwide.</p>
            </div>
            <div className="card__footer">
                <form>
                    <button className="button button--secondary button--block" formAction="vultr/overview/">View install instructions</button>
                </form>
            </div>
        </div>
    </div>
</div>
